Enable preview to allow pattern matching in switch