@@ -18,6 +18,18 @@ tasks.jar {
     manifest.attributes["Main-Class"] = "com.craftinginterpreters.lox.Lox"
 }
 
+tasks.withType<JavaCompile>().configureEach {
+    options.compilerArgs.add("--enable-preview")
+}
+
+tasks.withType<Test>().configureEach {
+    jvmArgs("--enable-preview")
+}
+
+tasks.withType<JavaExec>().configureEach {
+    jvmArgs("--enable-preview")
+}
+
 tasks.test {
     useJUnitPlatform()
 }
